MODON MRE BPDEV/force-app/main/default/objects/SignzyAPIConfig__c/SignzyAPIConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Signzy API Config</label>
</CustomObject>