MODON MRE BPDEV/force-app/main/default/objects/SignzyAPIConfig__c/fields/Auth_Token_Production__c.field-meta.xml
<CustomField>
    <fullName>Auth_Token_Production__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Auth Token Production</label>
    <length>255</length>
    <type>Text</type>
</CustomField>