MODON MRE BPDEV/force-app/main/default/objects/SignzyAPIConfig__c/fields/Get_Journey_Status_URL_Production__c.field-meta.xml
<CustomField>
    <fullName>Get_Journey_Status_URL_Production__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Get Journey Status URL Production</label>
    <length>255</length>
    <type>Text</type>
</CustomField>