MODON MRE BPDEV/force-app/main/default/objects/SignzyAPIConfig__c/fields/Journey_Creation_URL_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Journey_Creation_URL_Sandbox__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Journey Creation URL Sandbox</label>
    <length>255</length>
    <type>Text</type>
</CustomField>