MODON MRE BPDEV/force-app/main/default/objects/SignzyAPIConfig__c/fields/OICPassword_Production__c.field-meta.xml
<CustomField>
    <fullName>OICPassword_Production__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OICPassword Production</label>
    <length>255</length>
    <type>Text</type>
</CustomField>