MODON MRE BPDEV/force-app/main/default/objects/SignzyAPIConfig__c/fields/OICUserName_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>OICUserName_Sandbox__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OICUserName Sandbox</label>
    <length>255</length>
    <type>Text</type>
</CustomField>